...
    <string name="create_secret_gist">Secret Gist</string>
    <string name="create_public_gist">Public Gist</string>
    <string name="submit_as">Submit as</string>
    <string name="delete_gist">Delete</string>
    <string name="error_deleting_gist">Error deleting gist</string>
    <string name="no_files">No files</string>
    <string name="required_field">Required field</string>
    <string name="successfully_submitted">Successfully submitted</string>
    <string name="create_gist">Create a Gist</string>
    <string name="clear">Clear</string>
    <string name="users">Users</string>
    <string name="title">Title</string>
    <string name="file">File</string>
...
    <string name="submit_feedback">Submit feedback</string>
    <string name="logout">Logout</string>
    <string name="thank_you_for_feedback">Thanks for your feedback!</string>
    <string name="current_version">Current version</string>
    <string name="version">Version</string>
    <string name="support_development_enable_ads">Support development, enable ads</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="twoFactor">Two-factor authentication code</string>
    <string name="login">Login</string>
    <string name="gist_description">Gist description</string>
    <string name="avatar_click_hint">Wherever there is a user avatar, you can click it to open the user\'s profile</string>
    <string name="feeds_fork_hint">Long click on a fork event to open either the original or the forked repo.</string>
    <string name="click_here_to_download_release_hint">Download releases</string>
    <string name="options">Options</string>
    <string name="click_file_option_hint">Download file or share directory</string>
...
